Bug 895311 - Avoid calling ScheduleReflowSVGNonDisplayText when constructing frames during reflow. r=jwatt